--- a/sass/page/Section4/work.scss
+++ b/sass/page/Section4/work.scss
@@ -10,6 +10,7 @@
     background-color: rgb(0, 0, 0);
     z-index: 10;
     padding-left: 15rem;
+    padding-top: 3rem;
     width: 100%;
     z-index: 1000;
   }
@@ -33,7 +34,7 @@
 
   &__combo-set {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.7fr 1fr;
     padding: 0rem 15rem;
     gap: 3.5rem;
   }
@@ -53,14 +54,14 @@
 
   &__sticky-section {
     position: sticky;
-    top: 12rem;
+    top: 16.5rem;
     height: 100vh;
   }
 
   &__cover {
     height: 25vh;
     position: sticky;
-    top: 90vh;
+    top: 85vh;
     background-color: rgb(0, 0, 0);
     z-index: 1000;
     font-size: 15.7rem;
