--- a/styles/sassStyle.css
+++ b/styles/sassStyle.css
@@ -276,9 +276,8 @@ body {
 }
 
 .navbar-icon {
-  height: 60px;
-  width: auto;
-  object-fit: contain;
+  width: 150px; /* Increase this value as needed */
+  height: auto; /* Maintains aspect ratio */
 }
 
 .logos {
@@ -389,6 +388,7 @@ body {
   background-color: rgb(0, 0, 0);
   z-index: 10;
   padding-left: 15rem;
+  padding-top: 3rem;
   width: 100%;
   z-index: 1000;
 }
@@ -409,7 +409,7 @@ body {
 }
 .work-section__combo-set {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 0.7fr 1fr;
   padding: 0rem 15rem;
   gap: 3.5rem;
 }
@@ -425,13 +425,13 @@ body {
 }
 .work-section__sticky-section {
   position: sticky;
-  top: 12rem;
+  top: 16.5rem;
   height: 100vh;
 }
 .work-section__cover {
   height: 25vh;
   position: sticky;
-  top: 90vh;
+  top: 85vh;
   background-color: rgb(0, 0, 0);
   z-index: 1000;
   font-size: 15.7rem;
